# boyar_tournament

./: Cargo.toml
.cargo/: config.toml
assets/: arena_template.aseprite  cards.aseprite  tixon.aseprite  units.aseprite
assets/arena/: arena_winter.aseprite  winter_arena.aseprite
assets/cards/: vizivayushiy_podozreniye.aseprite  zapodozrenniy.aseprite
assets/cards/blue/: blue.aseprite
assets/cards/bomber/: bomber.aseprite
assets/cards/jrec/: jrec.aseprite
assets/cards/red/: red.aseprite
assets/rus_animations/: rus_walkingNorth.aseprite  rus_walkingSouth.aseprite
assets/units/archer_tower/: archer_tower.aseprite
assets/units/bomber/: bomb.aseprite
assets/units/king_tower/: ally_tower.aseprite  enemy_tower.aseprite  king_tower.aseprite
assets/units/muha/: muha.aseprite
assets/units/musketeer/: ally_musketeer.aseprite  bullet.aseprite  enemy_musketeer.aseprite  mushket.aseprite  musketeer.aseprite
assets/units/priest/: fireball.aseprite
boyar_tournament/: Cargo.toml
boyar_tournament/src/: scaling.rs
boyar_tournament/src/screens/: ui.rs
boyar_tournament/src/screens/gameplay/: arena.rs  deck.rs  mod.rs  networking.rs
boyar_tournament/src/screens/gameplay/projectiles/: mod.rs
boyar_tournament/src/screens/gameplay/units/: archer_tower.rs  king_tower.rs  mod.rs
common/src/: lib.rs
desktop_client/: Cargo.toml
desktop_client/src/: main.rs
docs/: cards.txt  crates.txt
mobile/: Cargo.toml
mobile/src/: lib.rs
mobile_client/: Cargo.toml
server/: Cargo.toml
server/src/: ai.rs  main.rs  networking.rs
server/src/projectiles/: bullet.rs  mod.rs
server/src/units/: archer_tower.rs  king_tower.rs  mod.rs
src/: dev_tools.rs  lib.rs  main.rs  scaling.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
