[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
boyar_tournament = { path = ".." }
bevy = { version = "0.14", default-features = false }

[package.metadata.android]
package = "valetoriy.boyar_tournament"
apk_name = "BoyarTournament"
assets = "../assets"
strip = "strip"
resources = "../resources/android"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 35

[package.metadata.android.application]
icon = "@mipmap/android_icon"
label = "Boyar Tournament"
